code refactoring and button styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Блог путешественника во времени</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,14 +12,14 @@
         <div class="header">
             <p>Путешествие во времени</p>
             <div class="butons">
-                <button class="buton1">Обо мне</button>
-                <button class="buton2">Путешествия</button>
-                <button class="buton3">Возможности машины времени</button>
+                <button>Обо мне</button>
+                <button>Путешествия</button>
+                <button>Возможности машины времени</button>
             </div>
-        </div>
+        </div>  
     </header>
 
-    <div class="divNav">
+    <div class="divNav block">
         <div>
             <h2>Отправляйтесь в путешествие во времени</h2>
             <p>
@@ -30,7 +30,7 @@
         </div>
         <nav>
             <p>Быстрая навигация</p>
-            <button>Строение машины </button>
+            <button>Строение машины</button>
             <button>Расчеты</button>
             <button>Путешествия</button>
             <button>Подать заявку</button>
@@ -38,7 +38,7 @@
     </div>
  <!-------------------------------------------------------------------------------------->
     <main>
-        <div class="timeMachine">
+        <div class="timeMachine block">
             <h2>Машина времени</h2>
             <div>
                 <p>Наша машина времени построена на основе трех основных компонентов: <br>
@@ -46,31 +46,39 @@
                     - Квантовый регулятор времени: устройство, контролирующее и корректирующее хронологические параметры путешествий во времени. <br>
                     - Космический капсулант: средство транспортировки, обеспечивающее безопасность и комфорт во время переезда по времени.
                 </p>
-                <img src="./assets/img/image 2.png" alt="Здесь должна была быть картинка">
+                <img src="./assets/img/image2.png" alt="Здесь должна была быть картинка">
             </div>
         </div>
 
-        <div class="ourCalculations">
+        <div class="ourCalculations block">
             <h2>Наши расчеты</h2>
             <div>
-                <div><p>По результатам наших расчетов, мы получаем убедительные доказательства возможности дальних путешествий с помощью машины времени. Наши ученые заботливо изучили каждый аспект временных теорий и механизмов, чтобы обеспечить безопасное и точное перемещение в разные эпохи.</p></div>
-                <div><p>Проведя многочисленные эксперименты и тесты, мы установили, что машина времени способна проникнуть в самые отдаленные уголки истории, включая далекие цивилизации и древние культуры.</p></div>
+                <div>
+                    <p>
+                        По результатам наших расчетов, мы получаем убедительные доказательства возможности дальних путешествий с помощью машины времени. Наши ученые заботливо изучили каждый аспект временных теорий и механизмов, чтобы обеспечить безопасное и точное перемещение в разные эпохи.
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        Проведя многочисленные эксперименты и тесты, мы установили, что машина времени способна проникнуть в самые отдаленные уголки истории, включая далекие цивилизации и древние культуры.
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="Journeys">
+        <div class="Journeys block">
             <h2>Путешествия</h2>
             <div>
                 <div>
-                    <img src="./assets/img/image 3.png" alt="Здесь должна была быть картинка">
+                    <img src="./assets/img/image3.png" alt="Здесь должна была быть картинка">
                     <p>Древний Египет. <br> Сад Фараона Рамсеса 2</p>
                 </div>
                 <div>
-                    <img src="./assets/img/image 4.png" alt="Здесь должна была быть картинка">
+                    <img src="./assets/img/image4.png" alt="Здесь должна была быть картинка">
                     <p>Древняя Греция. <br> Театральная площадь</p>
                 </div>
                 <div>
-                    <img src="./assets/img/image 5.png" alt="Здесь должна была быть картинка">
+                    <img src="./assets/img/image5.png" alt="Здесь должна была быть картинка">
                     <p>Париж. <br> Собор Парижской Богоматери</p>
                 </div>
             </div>
