Добавлена третья страница и отредактированы осальные

--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
 </head>
 <body>
     <header>
-        <img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка">
-        <div class="header">
-            <p>Путешествие во времени</p>
+        <div>
+            <a class="logo" href="index.html"><img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
+            <div class="header">
             <div class="butons">
-                <button>Обо мне</button>
-                <button>Путешествия</button>
-                <button>Возможности машины времени</button>
+                <button><a href="#">Возможности машины времени</a></button>
+                <button><a href="./thirstPage/index.html">Обо мне</a></button>
+                <button><a href="./secondPage/index.html">Путешествия</a></button>
             </div>
-        </div>  
+            </div>
+        </div>
+        <div class="divNav block">
+            <div>
+                <h2>Отправляйтесь в путешествие во времени</h2>
+                <p>
+                    Интересуетесь загадками прошлого, настоящего и <br> 
+                    будущего? Хотите узнать больше о возможности <br> 
+                    путешествия во времени? Вы на верном пути!
+                </p>
+            </div>
+            <nav>
+                <p>Быстрая навигация</p>
+                <button><a href="#">Строение машины</a></button>
+                <button><a href="#">Расчеты</a></button>
+                <button><a href="#">Путешествия</a></button>
+                <button><a href="#">Подать заявку</a></button>
+            </nav>
+        </div>
     </header>
 
-    <div class="divNav block">
-        <div>
-            <h2>Отправляйтесь в путешествие во времени</h2>
-            <p>
-                Интересуетесь загадками прошлого, настоящего и <br> 
-                будущего? Хотите узнать больше о возможности <br> 
-                путешествия во времени? Вы на верном пути!
-            </p>
-        </div>
-        <nav>
-            <p>Быстрая навигация</p>
-            <button>Строение машины</button>
-            <button>Расчеты</button>
-            <button>Путешествия</button>
-            <button>Подать заявку</button>
-        </nav>
-    </div>
+    
  <!-------------------------------------------------------------------------------------->
     <main>
         <div class="timeMachine block">
@@ -54,16 +56,14 @@
         <div class="ourCalculations block">
             <h2>Наши расчеты</h2>
             <div>
-                <div>
-                    <p>
-                        По результатам наших расчетов, мы получаем убедительные доказательства возможности дальних путешествий с помощью машины времени. Наши ученые заботливо изучили каждый аспект временных теорий и механизмов, чтобы обеспечить безопасное и точное перемещение в разные эпохи.
-                    </p>
-                </div>
-                <div>
-                    <p>
-                        Проведя многочисленные эксперименты и тесты, мы установили, что машина времени способна проникнуть в самые отдаленные уголки истории, включая далекие цивилизации и древние культуры.
-                    </p>
-                </div>
+                <p>
+                    Наши расчеты были таковы: при интегрировании формулы хроноконтура 
+                    (t =(1-v²/c²) dt) мы обнаружили, что скорость перемещения во времени 
+                    должна быть значительно близка к скорости света, чтобы можно было 
+                    успешно преодолеть пространство-время. Это позволит нам создать 
+                    машину <br> времени и отправиться в прошлое или будущее! Энергия 
+                    времени, определяемая формулой E = mc² - E₀, оказывается 
+                    непостижимо велика и может изменить ход истории человечества.</p>
             </div>
         </div>
 
@@ -111,12 +111,15 @@
         </div>
     </main>
 <!--------------------------------------------------------------------------------------->
-    <footer>
-        <img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка">
-        <div class="header">
-            <p>ООО «Тайм Трэвел»</p>
-            <p>2024. Все права защищены.</p>
-        </div>  
-    </footer>
+<footer>
+    <div class="footer">
+        <a class="logo" href="index.html"><img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
+        <p>
+            <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
+            <span>8-(800)555-35-35</span>
+        </p>
+    </div>
+    <button><a href="#">Принять участие</a></button>
+</footer>
 </body>
 </html>
