--- a/secondPage/index.html
+++ b/secondPage/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка">
+        <a class="logo" href="../index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
         <div class="header">
             <p>Путешествие во времени</p>
             <div class="butons">
-                <button>Обо мне</button>
-                <button>Путешествия</button>
-                <button>Возможности машины времени</button>
+                <button><a href="../thirstPage/index.html">Обо мне</a></button>
+                <button><a href="index.html">Путешествия</a></button>
+                <button><a href="#">Возможности машины времени</a></button>
             </div>
         </div>  
     </header>
@@ -23,6 +23,7 @@
     <main>
         <h2>Наши путешествия</h2>
         <section class="egypt">
+            <img src="" alt="">
             <div class="text">
                 <p>
                     В путешествии в сад фараона Рамсеса II мы 
@@ -45,8 +46,7 @@
                 <div><img src="../assets/img/статуиБогов.png" alt=""><p>Статуи Богов</p></div>
             </div>
         </section>
-
-
+        <div><img src="../assets/img/Линия.png" alt=""></div>
         <section class="greece">
             <div class="text">
                 <p>
@@ -64,12 +64,11 @@
             </div>
             <div class="image">
                 <div><img src="../assets/img/мозаика.png" alt=""><p>Мозаика</p></div>
-                <div><img src="../assets/img/статуяБогаЗевса.png" alt=""><p>Статуя БогаЗевса</p></div>
+                <div><img src="../assets/img/статуяБогаЗевса.png" alt=""><p>Статуя Бога Зевса</p></div>
                 <div><img src="../assets/img/римскийСад.png" alt=""><p>Римский Сад</p></div>
             </div>
         </section>
-
-
+        <div><img src="../assets/img/Линия.png" alt=""></div>
         <section class="paris">
             <div class="text">
                 <p>
@@ -95,13 +94,14 @@
     </main>
     <!---------------------------------------------------------------------->
     <footer>
-        <img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка">
-        <div class="header">
-            <p>ООО «Тайм Трэвел»</p>
-            <p>2024. Все права защищены.</p>
-        </div>  
+        <div class="footer">
+            <a class="logo" href="../index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
+            <p>
+                <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
+                <span>8-(800)555-35-35</span>
+            </p>
+        </div>
+        <button><a href="#">Принять участие</a></button>
     </footer>
-
-
 </body>
 </html>
