--- a/thirstPage/index.html
+++ b/thirstPage/index.html
@@ -13,9 +13,9 @@
         <div class="header">
             <p>Путешествие во времени</p>
             <div class="butons">
+                <button><a href="#">Возможности машины времени</a></button>
                 <button><a href="index.html">Обо мне</a></button>
                 <button><a href="../secondPage/index.html">Путешествия</a></button>
-                <button><a href="#">Возможности машины времени</a></button>
             </div>
         </div>  
     </header>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="forma">
                     <form action="#" enctype="multipart/form-data">
-                        <input type="file" id="file">
+                        <input type="file" id="file" required>
                         <label for="file">Прикрепите файл... <img src="../assets/img/file.png" alt=""></label>
                         <button type="submit">Отправить</button>
                     </form>
