--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="question block">
             <h2>Задайте свой вопрос!</h2>
             <div>
-                <form action="#">
+                <form action="#" method="post">
                     <input placeholder="Введите имя..." type="text" name="userName" required>
                     <input placeholder="Введите почту..." type="email" name="userEmail" required>
                     <div class="custom-select">
@@ -121,7 +121,7 @@
         <a class="logo" href="index.html"><img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
         <p>
             <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
-            <span>8-(800)555-35-35</span>
+            <a href="tel:+78005553535"><span>8-(800)555-35-35</span></a>
         </p>
     </div>
     <button><a href="#">Принять участие</a></button>
