--- a/thirstPage/index.html
+++ b/thirstPage/index.html
@@ -53,8 +53,8 @@
                     <p class="blockdiv1">И помните,это действие будет иметь последствия...</p>
                 </div>
                 <div class="forma">
-                    <form action="#" enctype="multipart/form-data">
-                        <input type="file" id="file" required>
+                    <form action="#" method="post" enctype="multipart/form-data">
+                        <input type="file" id="file" accept=".txt, .doc, .docx" required>
                         <label for="file">Прикрепите файл... <img src="../assets/img/file.png" alt=""></label>
                         <button type="submit">Отправить</button>
                     </form>
@@ -73,7 +73,7 @@
             <a class="logo" href="../index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
             <p>
                 <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
-                <span>8-(800)555-35-35</span>
+                <a href="tel:+78005553535"><span>8-(800)555-35-35</span></a>
             </p>
         </div>
         <button><a href="#">Принять участие</a></button>
