сделал четвертую страницу

--- a/secondPage/index.html
+++ b/secondPage/index.html
@@ -11,9 +11,8 @@
     <header>
         <a class="logo" href="../index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
         <div class="header">
-            <p>Путешествие во времени</p>
             <div class="butons">
-                <button><a href="#">Возможности машины времени</a></button>
+                <button><a href="../4Page/index.html">Возможности машины времени</a></button>
                 <button><a href="../thirstPage/index.html">Обо мне</a></button>
                 <button><a href="index.html">Путешествия</a></button>
             </div>
