--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a class="logo" href="index.html"><img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
                 <div class="header">
                 <div class="butons">
-                    <button><a href="#">Возможности машины времени</a></button>
+                    <button><a href="./4Page/index.html">Возможности машины времени</a></button>
                     <button><a href="./thirstPage/index.html">Обо мне</a></button>
                     <button><a href="./secondPage/index.html">Путешествия</a></button>
                 </div>
@@ -31,10 +31,10 @@
                 </div>
                 <nav>
                     <p>Быстрая навигация</p>
-                    <button><a href="#">Строение машины</a></button>
-                    <button><a href="#">Расчеты</a></button>
-                    <button><a href="#">Путешествия</a></button>
-                    <button><a href="#">Подать заявку</a></button>
+                    <button><a href="#timeMachine">Строение машины</a></button>
+                    <button><a href="#ourCalculations">Расчеты</a></button>
+                    <button><a href="#Journeys">Путешествия</a></button>
+                    <button><a href="#question">Подать заявку</a></button>
                 </nav>
             </div>
         </div>
@@ -43,7 +43,7 @@
     
  <!-------------------------------------------------------------------------------------->
     <main>
-        <div class="timeMachine block">
+        <div class="timeMachine block" id="timeMachine">
             <h2>Машина времени</h2>
             <div>
                 <p>Наша машина времени построена на основе трех основных компонентов: <br>
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="ourCalculations block">
+        <div class="ourCalculations block" id="ourCalculations">
             <h2>Наши расчеты</h2>
             <div>
                 <p>
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="Journeys block">
+        <div class="Journeys block" id="Journeys">
             <h2>Путешествия</h2>
             <div>
                 <div>
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <div class="question block">
+        <div class="question block" id="question">
             <h2>Задайте свой вопрос!</h2>
             <div>
                 <form action="#" method="post">
