--- a/4Page/index.html
+++ b/4Page/index.html
@@ -77,7 +77,7 @@
                 <a href="tel:+78005553535"><span>8-(800)555-35-35</span></a>
             </p>
         </div>
-        <button><a href="#">Принять участие</a></button>
+        <button><a href="../thirstPage/index.html#rezume">Принять участие</a></button>
     </footer>
 </body>
 </html>
