--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
             <a href="tel:+78005553535"><span>8-(800)555-35-35</span></a>
         </p>
     </div>
-    <button><a href="#">Принять участие</a></button>
+    <button><a href="./thirstPage/index.html#rezume">Принять участие</a></button>
 </footer>
-<script src="./afsd.js"></script>
+<script>
+    document.querySelector('form').addEventListener('submit', event => {
+        alert('Форма отправлена!');
+    });
+</script>
 </body>
 </html>
