сделал адаптив первой страницы

--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
             </div>
             <div class="divNav block">
                 <div>
-                    <h2>Отправляйтесь в путешествие во времени</h2>
+                    <h2>Отправляйтесь в путешествие <br> во времени</h2>
                     <p>
                         Интересуетесь загадками прошлого, настоящего и <br> 
                         будущего? Хотите узнать больше о возможности <br> 
                         путешествия во времени? Вы на верном пути!
                     </p>
                 </div>
-                <nav>
-                    <p>Быстрая навигация</p>
-                    <button><a href="#timeMachine">Строение машины</a></button>
-                    <button><a href="#ourCalculations">Расчеты</a></button>
-                    <button><a href="#Journeys">Путешествия</a></button>
-                    <button><a href="#question">Подать заявку</a></button>
-                </nav>
+                <div class="nav">
+                    <nav>
+                        <p>Быстрая навигация</p>
+                        <button><a href="#timeMachine">Строение машины</a></button>
+                        <button><a href="#ourCalculations">Расчеты</a></button>
+                        <button><a href="#Journeys">Путешествия</a></button>
+                        <button><a href="#question">Подать заявку</a></button>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
@@ -43,18 +45,21 @@
     
  <!-------------------------------------------------------------------------------------->
     <main>
+        <hr>
+        <!-- <div class="linia_adaptiv"></div> -->
         <div class="timeMachine block" id="timeMachine">
             <h2>Машина времени</h2>
             <div>
+                <img src="./assets/img/image2.png" alt="Здесь должна была быть картинка">
                 <p>Наша машина времени построена на основе трех основных компонентов: <br>
                     - Хроноконвертер: устройство, способное создавать временной портал, через который можно путешествовать во времени. <br>
                     - Квантовый регулятор времени: устройство, контролирующее и корректирующее хронологические параметры путешествий во времени. <br>
                     - Космический капсулант: средство транспортировки, обеспечивающее безопасность и комфорт во время переезда по времени.
                 </p>
-                <img src="./assets/img/image2.png" alt="Здесь должна была быть картинка">
             </div>
         </div>
 
+        <!-- <div class="linia_adaptiv"></div> -->
         <div class="ourCalculations block" id="ourCalculations">
             <h2>Наши расчеты</h2>
             <div>
@@ -69,6 +74,7 @@
             </div>
         </div>
 
+        <!-- <div class="linia_adaptiv"></div> -->
         <div class="Journeys block" id="Journeys">
             <h2>Путешествия</h2>
             <div>
@@ -87,6 +93,7 @@
             </div>
         </div>
 
+        <!-- <div class="linia_adaptiv"></div> -->
         <div class="question block" id="question">
             <h2>Задайте свой вопрос!</h2>
             <div>
