сделал вторую страницу адаптив и подредактировал первую

--- a/thirstPage/index.html
+++ b/thirstPage/index.html
@@ -16,13 +16,19 @@
                 <button><a href="index.html">Обо мне</a></button>
                 <button><a href="../secondPage/index.html">Путешествия</a></button>
             </div>
-        </div>  
+        </div>
+        <div class="burger_menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
     <!------------------------------------------------------------------------>
     <main>
         <section class="My">
             <h2>Обо мне</h2>
             <div>
+                <img src="../assets/img/Старик.png" alt="Здесь должна была быть картинка">
                 <p>
                     Меня зовут Профессор Игнатий Чахлый. <br>
                     С возрастом, как со временем - 
@@ -41,7 +47,6 @@
                     не бываю. Но именно в этой сложности 
                     заключается мое величие и уникальность!
                 </p>
-                <img src="../assets/img/Старик.png" alt="Здесь должна была быть картинка">
             </div>
         </section>
         <section class="rezume" id="rezume">
@@ -77,6 +82,7 @@
         </div>
         <button><a href="#rezume">Принять участие</a></button>
     </footer>
+    
     <script>
         document.querySelector('form').addEventListener('submit', event => {
             alert('Форма отправлена!');
