--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 </div>
                 </div>
             </div>
+            <div class="burger_menu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class="divNav block">
                 <div>
                     <h2>Отправляйтесь в путешествие <br> во времени</h2>
@@ -133,6 +138,7 @@
     </div>
     <button><a href="./thirstPage/index.html#rezume">Принять участие</a></button>
 </footer>
+
 <script>
     document.querySelector('form').addEventListener('submit', event => {
         alert('Форма отправлена!');
