--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <button><a href="./4Page/index.html">Возможности машины времени</a></button>
             <button><a href="./thirstPage/index.html">Обо мне</a></button>
             <button><a href="./secondPage/index.html">Путешествия</a></button>
-            <button><a href="./secondPage/index.html">Главная страница</a></button>
+            <button><a href="index.html">Главная страница</a></button>
         </div>
         <p>
             <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
@@ -159,17 +159,9 @@
         alert('Форма отправлена!');
     });
 </script>
-<script>
-    let element = document.getElementsByClassName("osnova");
-    function burger_click(){
-    element[0].style.display = "flex";
-    document.querySelector(".overlay").style.display = 'block';
-    }
-    function closeOver(){
-        document.getElementById("overlay").style.display = 'none';
-        element[0].style.display = "none";
-    }
-</script>
+
+<script src="./burger_menu_click.js"></script>
+
 <script src="./js.js"></script>
 </body>
 </html>
