--- a/thirstPage/index.html
+++ b/thirstPage/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="overlay" id="overlay" onclick="closeOver()"></div>
     <header>
         <a class="logo" href="../index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
         <div class="header">
@@ -17,12 +18,29 @@
                 <button><a href="../secondPage/index.html">Путешествия</a></button>
             </div>
         </div>
-        <div class="burger_menu">
+        <div class="burger_menu" onclick="burger_click()">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </header>
+
+    <div class="osnova">
+        <div>
+            <a class="logo" href="index.html"><img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
+            <img src="./assets/img/крестик.svg" alt="крестик" onclick="closeOver()">
+        </div>
+        <div class="butons1">
+            <button><a href="./4Page/index.html">Возможности машины времени</a></button>
+            <button><a href="./thirstPage/index.html">Обо мне</a></button>
+            <button><a href="./secondPage/index.html">Путешествия</a></button>
+            <button><a href="index.html">Главная страница</a></button>
+        </div>
+        <p>
+            <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
+            <a href="tel:+78005553535"><span>8-(800)555-35-35</span></a>
+        </p>
+    </div>
     <!------------------------------------------------------------------------>
     <main>
         <section class="My">
@@ -87,6 +105,8 @@
         document.querySelector('form').addEventListener('submit', event => {
             alert('Форма отправлена!');
         });
-    </script>    
+    </script>
+
+    <script src="../burger_menu_click.js"></script>
 </body>
 </html>
